# near_contracts

./: .gitignore  LICENSE  README.md
ft/: Cargo.toml
ft/.cargo/: config
ft/src/: lib.rs
