[package]
name = "hypesaints_ft"
version = "1.0.0"
authors = ["<zheng.pan@hypesaints.xyz>"]
edition = "2022"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"


[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true